src/test/deca/context/invalid/SansObjet/DeclVar-NE-string-boolean-int.deca
// Description:
//    Declaration of a string variable using != operation between a boolean variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    int y = 20; 
    string z = true != 20; 
}
